[package]
name = "swc-plugin-css-variable"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Uncomment to achieve smallest possible binary size (may require more experimentation).
# Disclaimer: measure effects on runtime, results can be surprising.
# strip = "debuginfo"
# codegen-units = 1
# lto = true
# opt-level = "z"

[dependencies]
serde = {version="1.0.152", features = [
	"derive",
]}
serde_json = "1.0.91"
swc_core = {version = "0.58.0", features = [
	"ecma_plugin_transform",
	"ecma_ast",
	"common",
]}
pathdiff = "0.2.1"
regex = "1.7.1"
lazy_static = "1.4.0"
xxhash-rust = { version = "0.8.6", features = ["xxh32"] }
base62 = "2.0.2"

[dev-dependencies]
swc_core = {version = "0.58.0", features = [
	"ecma_parser",
]}
