[package]
name = "swc-plugin-css-variable"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib is for dynamic system library and necessary to produce the Wasm plugin
# rlib is required for criterion benchmark
crate-type = ["cdylib", "rlib"]

[profile.release]
# Uncomment to achieve smallest possible binary size (may require more experimentation).
# Disclaimer: measure effects on runtime, results can be surprising.
# strip = "debuginfo"
# codegen-units = 1
# lto = true
# opt-level = "z"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
swc_core = { version = "0.58.0", features = ["ecma_plugin_transform"] }
pathdiff = "0.2.1"
regex = "1.7.1"
lazy_static = "1.4.0"
xxhash-rust = { version = "0.8.6", features = ["xxh32"] }
base62 = "2.0.2"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
swc_core = { version = "0.58.0", features = ["ecma_parser"] }

[[bench]]
name = "bench_main"
harness = false
