[workspace]
members = [
    "swc-plugin-css-variable"
]

[profile.release]
# Uncomment to achieve smallest possible binary size (may require more experimentation).
# Disclaimer: measure effects on runtime, results can be surprising.
# strip = "debuginfo"
# codegen-units = 1
# lto = true
# opt-level = "z"
