[package]
name = "swc-plugin-css-variable"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib is for dynamic system library and necessary to produce the Wasm plugin
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
pathdiff = "0.2.1"
regex = "1.10.3"
serde_json = "1.0.111"
swc_core = { version = "16.0.0", features = ["ecma_plugin_transform"] }

transform = { path = "../transform" }
